--- a/index3.html
+++ b/index3.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 	<script src="main.js" async></script>
-	<script src="app.js" defer type="module"></script>
-	<title>AdminSite</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 	
 	<!-- SIDEBAR -->
@@ -20,10 +22,10 @@
 			<li>
 				<a href="#"><i class='bx bxs-inbox icon' ></i> FILTROS <i class='bx bx-chevron-right icon-right' ></i></a>
 				<ul class="side-dropdown">
-					<li><a href="#">Año</a></li>
-					<li><a href="./index2.html">Actor</a></li>
+					<li><a href="./index.html">Año</a></li>
+					<li><a href="#">Actor</a></li>
 					<li><a href="#">IMDb</a></li>
-					<li><a href="">Titulos</a></li>
+					<li><a href="./index2.html">Titulos</a></li>
 				</ul>
 			</li>
 			<li><a href="./index2.html"><i class='bx bxs-chart icon' ></i>Títulos y años de lanzamiento</a></li>
@@ -65,13 +67,13 @@
 
 		<!-- MAIN -->
 		<main>
-			<h1 class="title">FILTRO AÑO</h1>
+			<h1 class="title">FILTRO IMDb </h1>
 			<ul class="breadcrumbs">
 				<li><a href="#">Home</a></li>
 				<li class="divider">/</li>
 				<li><a href="#" class="active">Dashboard</a></li>
 			</ul>
-				<input type="text" class="boton1" aria-label="Search" id="idBusqueda" placeholder="ingrese el año de la pelicula">
+				<input type="text" class="boton1" aria-label="Search" id="idBusqueda" placeholder="Ingrese el IMDb de la pelicula">
 				<button class="enviarr" id="enviar">send</button>
 			
 				<div id="datosPeliculas"></div>
@@ -104,8 +106,8 @@
 				</ul>
 			</li>
 			<li><a href="#"><i class='bx bxs-chart icon' id="TitulosLanzamiento" ></i></a></li>
-			<li><a href="#"><i class='bx bxs-widget icon' ></i>   </a></li>
-			<li><a href="#"><i class='bx bx-table icon' ></i> </a></li>
+			<li><a href="#"><i class='bx bxs-widget icon' ></i> </a></li>
+			<li><a href="#"><i class='bx bx-table icon' ></i></a></li>
 			<li>
 				<a href="#"><i class='bx bxs-notepad icon' ></i> <i class='bx bx-chevron-right icon-right' ></i></a>
 				<ul class="side-dropdown">
@@ -122,5 +124,5 @@
 	
 		
 </body>
-<script src="./app.js"></script>
+<script src="./script3.js"></script>
 </html>
